--- a/demo.html
+++ b/demo.html
@@ -33,7 +33,33 @@
     <del>刪除標示</del><br>
     <mark>標註
     <hr>
-    
-    
-<body>
-<html>
+    <h2>超連結(a)</h2>
+    <a href="https://www.google.com.tw/">google</a>
+    <!--另開視窗--> 
+    <a href="https://www.nutc.edu.tw/"target="_blank">國立台中科技大學</a>
+    <br>
+    <!-- br*10 -->
+    <br><br><br><br><br><br><br><br><br><br>
+    <a href="#up">錨點</a>
+    <hr>
+    <h2>圖片(img)</h2>
+    <img src="https://cdn-icons-png.flaticon.com/512/10167/10167547.png" alt="">
+    <img width="200" height="200" src="bee.png" alt="">
+    <hr>
+    <h2>列表(u1 o1)</h2>
+    <ul type="square">
+        <1i>1</1i>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    <ol type="I">
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ol>
+    <dl>
+        <dt>姓名</dt>
+        <dd>王大明</dd>
+    </dl>   
+</body>
+</html>
