--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
- <h2>段落(P)</h2>   
+ <h2 id="up">段落(P)</h2>   
  <P>我是段落</P>
  <hr>
  <h2>標籤(span)</h2>
@@ -31,7 +31,7 @@
     456 <sub>下標</sub><br>
     <ins>新增標示</ins><br>
     <del>刪除標示</del><br>
-    <mark>標註
+    <mark>標註</mark>
     <hr>
     <h2>超連結(a)</h2>
     <a href="https://www.google.com.tw/">google</a>
@@ -60,6 +60,54 @@
     <dl>
         <dt>姓名</dt>
         <dd>王大明</dd>
-    </dl>   
+    </dl>  
+    <hr>
+    <h2>輸入(input)</h2>
+    輸入框:<input type="text" value="abc">
+    <br>
+    密碼:<input type="password"> 
+    <br>
+    數字:<input type="number"  min="5" max="10">
+    <br>
+    複選(checkbox)<br>
+    興趣：
+    <input type="checkbox" disabled>看書
+    <input type="checkbox" checked>運動
+    <input type="checkbox">看電視
+    <br>
+    單選(radio)<br>
+    性別:
+    女生<input type="radio" name="sex">
+    男生<input type="radio" name="sex">
+    不方便透露<input type="radio" name="sex">
+    <br>
+    按鈕(button)
+    <input type="button" value="登入">
+    <input type="submit" value="登入">
+    <button>
+        <img width="15" height="15" src="bee.png" alt="">
+        登入
+    </button>
+    <br>
+    日期(date)
+    <input type="date" min="2023-03-31" max="2023-04-30"> 
+    <br>
+    時間(time)
+    <input type="time" value="16:00">
+    <br>
+    檔案上傳(file)
+    <input type="file" accept="image/*">
+    <br>
+    文章(textarea)
+    <textarea cols="20" rows="5"></textarea>
+    <br>
+    下拉式選單(select)
+    <select>
+        <option>博士</option>
+        <option>研究所</option>
+        <option>大學</option>
+        <option>高中</option>
+    </select>
+    <input>
 </body>
 </html>
