--- a/two.html
+++ b/two.html
@@ -28,8 +28,10 @@
         </tr>
         <tr>
             <td align="center">就讀學校</td>
-            <td a href="https://www.nutc.edu.tw/">
-        </tr>
+            <td>
+                <a href="https://www.nutc.edu.tw/">台中科技大學</a>
+            </td>
+            </tr>
         <tr>
             <td align="center" rowspan="3">専長</td>
             <td>網頁設計</td>
